# wf-shell

./: .gitignore  wf-shell.ini.example
data/: meson.build
data/backgrounds/: README.md  dharmx-bird-statue.README  dharmx-man-robot.README  dharmx-snow-machines.README
data/css/: default.css
data/icons/menu/: meson.build
data/themes/: amiga-workbench.css  beos-haiku.css  catppuccin-mocha.css  cde-solaris.css  crt-phosphor.css  dracula.css  gen_themes.py  ibm-aix.css  meson.build  miami-cyberpunk.css  modern-glass.css  nextstep.css  nord.css  osx-aqua.css  rose-pine.css  sgi-irix.css  synthwave.css  system7.css  tokyo-night.css  win-xp.css  win95.css
docs/: DESKTOP-PRIVILEGES.md  FULL-STACK-REGRESSION.md  JSON-CONFIG.md  VALIDATE-BEFORE-APPLY.md  WCM-INVENTORY.md
docs/audio-control/tests/: test_defaults.py
docs/network-control/: ARCHITECTURE.md  PLAN.md  mockup.html
docs/network-control/tests/: coverage.sh  wifi-boot-e2e.sh
metadata/: panel.xml
scripts/: full-stack-regression.sh  integration-live-session.sh  integration-present-only-available.sh  regression-full-reinstall.sh  regression-pkg-system-user-cycle.sh
src/: meson.build
src/dock/: dock.cpp
src/panel/: panel.cpp
src/panel/widgets/: battery.cpp  battery.hpp  launchers.cpp  menu.cpp  menu.hpp  network.cpp  network.hpp  volume.cpp  volume.hpp
src/panel/widgets/window-list/: toplevel.cpp
src/settings/: app.cpp  app.hpp  config-backend.cpp  config-backend.hpp  main.cpp  meson.build  settings-theme.cpp  settings-theme.hpp  startup-gate.cpp  startup-gate.hpp  ux-labels.hpp  wf-settings.desktop
src/settings/pages/: desktop-page.cpp  desktop-page.hpp  display-page.cpp  display-page.hpp  dock-page.cpp  dock-page.hpp  mcp-page.cpp  mcp-page.hpp  network-page.cpp  network-page.hpp  panel-page.cpp  panel-page.hpp  plugin-page.cpp  plugin-page.hpp  session-page.cpp  session-page.hpp  sound-page.cpp  sound-page.hpp
src/util/: apply-gate.cpp  apply-gate.hpp  css-config.cpp  display-config.cpp  display-config.hpp  gtk-utils.cpp  gtk-utils.hpp  ini-file.cpp  ini-file.hpp  meson.build  panel-capabilities.cpp  panel-capabilities.hpp  power-controller-bsd.cpp  power-controller.cpp  session-env.cpp  session-env.hpp  shell-json-config.cpp  shell-json-config.hpp  theme-catalog.cpp  theme-catalog.hpp  theme-defaults.cpp  theme-defaults.hpp  user-config.cpp  user-config.hpp  wallpaper-util.cpp  wallpaper-util.hpp  wf-shell-app.cpp  wf-shell-app.hpp
src/util/audio/: audio-backend.hpp  audio-process.cpp
src/util/network/: connection.cpp  connection.hpp  freebsd-backend.cpp  freebsd-network-ui.cpp  freebsd-network-ui.hpp  freebsd-network.cpp  freebsd-network.hpp  manager.cpp  network-backend-factory.cpp  network-backend.hpp  network-info.cpp  network-info.hpp  network-log.cpp  network-log.hpp  network-types.cpp  network-types.hpp  network-widget.cpp  network-widget.hpp  network.cpp  network.hpp  traffic-history.cpp  traffic-history.hpp  wifi-ap.cpp  wifi-ap.hpp  wifi.cpp
tests/: apply-gate-test.cpp  config-backend-test.cpp  css-load-test.cpp  display-config-test.cpp  ini-file-test.cpp  meson.build  network-backend-test.cpp  panel-capabilities-test.cpp  power-controller-test.cpp  session-env-test.cpp  shell-json-config-test.cpp  startup-gate-test.cpp  theme-defaults-test.cpp  user-config-test.cpp  wallpaper-feed-test.cpp
