themes_path = join_paths(resource_dir, 'themes')

install_data('amiga-workbench.css', install_dir: themes_path)
install_data('beos-haiku.css', install_dir: themes_path)
install_data('catppuccin-mocha.css', install_dir: themes_path)
install_data('cde-solaris.css', install_dir: themes_path)
install_data('crt-phosphor.css', install_dir: themes_path)
install_data('dracula.css', install_dir: themes_path)
install_data('ibm-aix.css', install_dir: themes_path)
install_data('miami-cyberpunk.css', install_dir: themes_path)
install_data('modern-glass.css', install_dir: themes_path)
install_data('nord.css', install_dir: themes_path)
install_data('rose-pine.css', install_dir: themes_path)
install_data('sgi-irix.css', install_dir: themes_path)
install_data('synthwave.css', install_dir: themes_path)
install_data('system7.css', install_dir: themes_path)
install_data('tokyo-night.css', install_dir: themes_path)
install_data('win95.css', install_dir: themes_path)
install_data('nextstep.css', install_dir: themes_path)
install_data('osx-aqua.css', install_dir: themes_path)
install_data('win-xp.css', install_dir: themes_path)
