menu_icons_path = join_paths(icon_dir, 'menu')

install_data(
  'start-grid.svg',
  'win95-start.svg',
  'amiga-wb.svg',
  'crt-node.svg',
  'system7-apple.svg',
  'neon-orb.svg',
  'synth-grid.svg',
  'nord-circle.svg',
  'dracula-bat.svg',
  'rose-bloom.svg',
  'tokyo-pulse.svg',
  'catppuccin-latte.svg',
  install_dir: menu_icons_path,
)
