menu_icons_path = join_paths(icon_dir, 'menu')

install_data(
  'start-grid.svg',
  'win95-start.svg',
  'amiga-wb.svg',
  'crt-node.svg',
  'system7-apple.svg',
  'neon-orb.svg',
  'synth-grid.svg',
  'nord-circle.svg',
  'dracula-bat.svg',
  'rose-bloom.svg',
  'tokyo-pulse.svg',
  'catppuccin-latte.svg',
  'glass-orb.svg',
  'solaris-sun.svg',
  'sgi-cube.svg',
  'ibm-logo.svg',
  'haiku-leaf.svg',
  'nextstep-cube.svg',
  'aqua-globe.svg',
  'xp-flag.svg',
  install_dir: menu_icons_path,
)
